# EMA-S7-MICROSERVICE

./: .gitignore  README.md  compose.yml  marnello-speedrun-8000mhz.yml
auth/: Dockerfile  auth.yml  package.json  pnpm-lock.yaml  tsconfig.json
auth/src/: db.ts  server.ts
auth/src/controllers/: auth.controller.ts
auth/src/routes/: auth.route.ts  example.ts
combat/: combat.test.js  combat.yml  combatLogic.js  index.js  package.json  worker.js
combat/src/api/: combatRoutes.js
combat/src/logic/: combatLogic.js
combat/src/workers/: worker.js
combat/test/: combat.test.js  send_test.js
combatService/: combatService.yml
front/: .gitignore  Dockerfile  pnpm-lock.yaml
front/app/: root.tsx  routes.ts
game/: README.md  game.yml  index.js  package.json
game/test/: e2e.test.js  gameService.test.js  integration.test.js
hero/: .gitignore  Dockerfile  README.md  compose.yml  hero.yml  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
hero/prisma/: schema.prisma
init-scripts/: init.sql  migration.sql
item/: .gitignore  Dockerfile  README.md  init.sql  item.yml  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
item/prisma/: schema.prisma
item/src/: db.ts  server.ts
level-design/: .gitignore  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
levelDesign/: levelDesign.yml
nginx/: nginx.conf
save/: Dockerfile  package.json  pnpm-lock.yaml  save.yml
save/src/: app.module.ts  main.ts
user/: .gitignore  Dockerfile  README.md  pyproject.toml  user.yml
user/src/user/: check_auth.py  database.py  main.py  model.py
(+55 files in other folders)
